# tinyRT

./: .clang-format  CMakeLists.txt  Makefile  main.cpp  parser.h  ppmimage.cpp  ppmimage.h  tinymath.cpp  tinymath.h
